# fat_free_api

./: .gitignore  LICENSE  README.md  V01_graficos.html  V02_graficos.html  V03_graficos.html  pyproject.toml
fat_free_api/: app.py  fatfree.py  schemas.py
jupyter_notebook/: fat_free_calculation.ipynb
jupyter_notebook/code/: main.py  results_analysis.xlsx  results_analysis_v02.xlsx
jupyter_notebook/code/components/: __init__.py  ex_area.py  fatfree.py  test_area.py
jupyter_notebook/code/input/: input_v01.json  input_v02.json  input_v03.json
jupyter_notebook/tests/v01/01/: fat_free_calculation_v01-01.ipynb
jupyter_notebook/tests/v01/02/: fat_free_calculation_v01_02.ipynb
jupyter_notebook/tests/v01/03/: fat_free_calculation_v01-03.ipynb
jupyter_notebook/v00/: fat_free_calculation_v00-00.ipynb
jupyter_notebook/v01/00/: fat_free_calculation_v01-00.ipynb
tests/: conftest.py  test_axial_force.py
